[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "seaborn"
description = "Statistical data visualization"
authors = [{name = "Michael Waskom", email = "mwaskom@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE.md"}
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
stats = [
    "scipy>=1.14",
    "statsmodels>=0.14.3",
]

[dependency-groups]
test = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
]
# TODO: update lint job to include scientific dependencies after upgrading to a compatible type checker
lint = [
    "ruff==0.15.20",
    "mypy==1.10.1",
]
docs = [
    "numpydoc==1.6.0",
    "nbconvert==7.17.1",
    "ipykernel==7.3.0",
    "sphinx==5.3.0",  # Important: do not adjust this pin
    "sphinx-copybutton==0.5.2",
    "sphinx-issues==5.0.1",
    "sphinx-design==0.6.0",
    "pyyaml==6.0.3",
    "pydata_sphinx_theme==0.10.0rc2",  # Important: do not adjust this pin
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    "pandas-stubs==2.3.3.260113",
    "pre-commit==4.6.0",
    "flit==3.12.0",
]

[tool.uv]
default-groups = ["dev"]

[project.urls]
Source = "https://github.com/mwaskom/seaborn"
Docs = "http://seaborn.pydata.org"

[tool.flit.sdist]
exclude = ["doc/_static/*.svg"]

[tool.pytest.ini_options]
filterwarnings = [
   "ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning",
   "ignore:\\s*Pyarrow will become a required dependency of pandas:DeprecationWarning",
   "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning",
 ]

[tool.ruff]
line-length = 88
extend-exclude = ["seaborn/cm.py", "seaborn/external"]

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E741", "F522"]

[tool.mypy]
# Currently this ignores pandas and matplotlib
# We may want to make custom stub files for the parts we use
# I have found the available third party stubs to be less
# complete than they would need to be useful
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "seaborn/widgets.py",
    "seaborn/external/*",
    "seaborn/colors/*",
    "seaborn/cm.py",
    "seaborn/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
