[metadata]
license_file = LICENSE

[flake8]
max-line-length = 88
exclude = seaborn/cm.py,seaborn/external
ignore = E741,F522,W503

[mypy]
# Currently this ignores pandas and matplotlib
# We may want to make custom stub files for the parts we use
# I have found the available third party stubs to be less
# complete than they would need to be useful
ignore_missing_imports = True